Fixed a bug in application.yml